Add #6 language support

--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -1,7 +1,7 @@
 {
-  "bottomNavHome": "Home",
+  "bottomNavHome": "Swedish",
   "bottomNavConnections": "Connections",
   "bottomNavInsights": "Insights",
   "bottomNavScanAndCheck": "Scan and Check",
-  "shareData":"Share Data"
+  "shareData":"Share Datsa"
 }
