Add #6 Localization strings

--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -3,5 +3,5 @@
   "bottomNavConnections": "Connections",
   "bottomNavInsights": "Insights",
   "bottomNavScanAndCheck": "Scan and Check",
-  "shareData":"Share Datsa"
+  "generalShareData":"Share Datsa"
 }
