--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,5 +3,23 @@
   "bottomNavConnections": "Connections",
   "bottomNavInsights": "Insights",
   "bottomNavScanAndCheck": "Scan and Check",
-  "shareData":"Share Data"
+  "generalShareData":"Share Data",
+  "homeMedication":"Medication",
+  "homeActivities":"Activities",
+  "homeFood":"Food",
+  "homeEnvironment":"Environment",
+  "homeBiological":"Biological",
+  "homeYourVirtualPancreas":"Your virtual pancreas",
+  "settingsLanguage":"Language",
+  "settingsEnglish":"English",
+  "settingsSwedish":"Swedish",
+  "settingsSecurity":"Security (Face ID)",
+  "settingsMyWallet":"My Wallet",
+  "settingsMySharedData":"My Shared Data",
+  "scanAndCheckRejectAndChange":"Reject and change",
+  "scanAndCheckConfirm":"Confirm",
+  "scanAndCheckRecommendedInsulin":"Recommended insulin units:",
+  "scanAndCheckGlycemicIndex":"Glycemic index:",
+  "scanAndCheckCarbohydrates":"Carbohydrates:",
+  "scanAndCheckFoodScanAndCheck":"Food: Scan and Check"
 }
