Integrate registration using mobile number OTP #5, Integrate login using mobile number OTP #4
week 16,2023
Integrate registration using mobile number OTP #5, Integrate login using mobile number OTP #4

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,5 +21,21 @@
   "scanAndCheckRecommendedInsulin":"Recommended insulin units:",
   "scanAndCheckGlycemicIndex":"Glycemic index:",
   "scanAndCheckCarbohydrates":"Carbohydrates:",
-  "scanAndCheckFoodScanAndCheck":"Food: Scan and Check"
+  "scanAndCheckFoodScanAndCheck":"Food: Scan and Check",
+  "loginEnterMobileNumber":"Enter Mobile Number",
+  "login":"Login",
+  "loginNotYetUser":"Not yet a user?",
+  "loginRegisterNow":"Register Now",
+
+  "otpEnterOtp":"Enter the OTP sent to",
+  "otpNotReceive":"Didn't receive the OTP?",
+  "otpResend":"RESEND",
+  "otpConfirm":"Confirm",
+  "otpCancel":"Cancel",
+
+  "register":"Register",
+  "registerCancel":"Cancel",
+  "registerFirstName":"First name",
+  "registerLastName":"Last name",
+  "registerMobileNumber":"Mobile number"
 }
