Add #8 Preference SDK

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,6 +16,7 @@
   "settingsSecurity":"Security (Face ID)",
   "settingsMyWallet":"My Wallet",
   "settingsMySharedData":"My Shared Data",
+  "settingsPrivacyDashboard":"Privacy Dashboard",
   "settingsNotification":"Notifications",
   "scanAndCheckRejectAndChange":"Reject and change",
   "scanAndCheckConfirm":"Confirm",
