updations in settings screen, home screen
1.Settings screen UI has updated as per new design changes,
2. Rearrange the pie chart in center of home screen,
3. Renamed 'Scand and Check' in the bottom navigation as 'Scan & Check'.
4. Color of label's arrow mark in pie chart changed to grey.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,7 +2,7 @@
   "bottomNavHome": "Home",
   "bottomNavConnections": "Connections",
   "bottomNavInsights": "Insights",
-  "bottomNavScanAndCheck": "Scan and Check",
+  "bottomNavScanAndCheck": "Scan & Check",
   "generalShareData":"Share Data",
   "homeMedication":"Medication",
   "homeActivities":"Activities",
