#15 Integrate Dexcom API's

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,6 +18,7 @@
   "settingsMySharedData":"My Shared Data",
   "settingsPrivacyDashboard":"Privacy Dashboard",
   "settingsNotification":"Notifications",
+  "settingsDexcom":"Dexcom Dashboard",
   "scanAndCheckRejectAndChange":"Reject and change",
   "scanAndCheckConfirm":"Confirm",
   "scanAndCheckRecommendedInsulin":"Recommended insulin units:",
