#21 New wire frame changes (wallet comes to tab bar, connections goes to settings , add logout functionality in settings,privacy policy in settings)
New wire frame changes (wallet comes to tab bar, connections goes to settings , add logout functionality in settings, privacy policy in settings) #21

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "bottomNavHome": "Home",
-  "bottomNavConnections": "Connections",
+  "bottomNavMyWallet": "MyWallet",
   "bottomNavInsights": "Insights",
   "bottomNavScanAndCheck": "Scan & Check",
   "generalShareData":"Share Data",
@@ -15,9 +15,11 @@
   "settingsSwedish":"Swedish",
   "settingsSecurity":"Security (Face ID)",
   "settingsMyWallet":"My Wallet",
+  "settingsConnections":"My Connections",
   "settingsMySharedData":"My Shared Data",
-  "settingsPrivacyDashboard":"Privacy Dashboard",
+  "settingsPrivacyDashboard":"My Privacy Dashboard",
   "settingsNotification":"Notifications",
+  "settingsLogout":"Logout",
   "scanAndCheckRejectAndChange":"Reject and change",
   "scanAndCheckConfirm":"Confirm",
   "scanAndCheckRecommendedInsulin":"Recommended insulin units:",
