#22 Scan and check screen updates
Scan and check screen updates #22

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,12 +18,10 @@
   "settingsMySharedData":"My Shared Data",
   "settingsPrivacyDashboard":"Privacy Dashboard",
   "settingsNotification":"Notifications",
-  "scanAndCheckRejectAndChange":"Reject and change",
+  "scanAndCheckReject":"Reject",
   "scanAndCheckConfirm":"Confirm",
-  "scanAndCheckRecommendedInsulin":"Recommended insulin units:",
-  "scanAndCheckGlycemicIndex":"Glycemic index:",
-  "scanAndCheckCarbohydrates":"Carbohydrates:",
-  "scanAndCheckFoodScanAndCheck":"Food: Scan and Check",
+  "scanAndCheckContentText":"Click confirm to add this medicine to your medication list.",
+  "scanAndCheckMedicineScanAndAdd":"Medicine: Scan and Add",
   "loginEnterMobileNumber":"Enter Mobile Number",
   "login":"Login",
   "loginNotYetUser":"Not yet a user?",
