--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -35,9 +35,23 @@
   "otpConfirm":"Confirm",
   "otpCancel":"Cancel",
 
-  "register":"Register",
+  "register":"Registration",
+  "registerTopContent":"Data4Diabetes needs the following data to register and use the application. Please enter the data.",
+  "registerData4DiabetesTrust":"Make sure that you trust Data4Diabetes",
+  "registerBottomContent":"You may be sharing sensitive info with this site or app. See the data agreement details and Terms of Service.",
   "registerCancel":"Cancel",
-  "registerFirstName":"First name",
+  "registerFirstName":"Name (First Name, Surname)",
   "registerLastName":"Last name",
-  "registerMobileNumber":"Mobile number"
+  "registerMobileNumber":"Mobile number",
+   "registerAge":"Age",
+   "registerCGM":"CGM Data (mmol)",
+   "registerInsights":"Insights",
+   "registerAgree":"Agree",
+   "registerNext":"Next",
+   "registerAgreeFinish":"Agree & Finish",
+   "registerScannedImages":"Scanned Images",
+  "registerDonateData":"Donate your data!",
+   "registerBackupAndRestore":"Backup and Restore",
+   "registerBackupAndRestoreContent":"Data4 Diabetes recommends you to save all your data in your own data pod, fully encrypted. You can revoke this decision later from your personal data dashboard.",
+  "registerDonateDataContent":"Data4Diabetes recommends you to donate your diabetes data and insights towards researchers.This will be anonymously shared."
 }
