Fixed the changes mentioned in PR
 Error text strings also should add in the app_en.arb file. Make sure in all screens.

**Registration**
Data is persisting when going back and coming again

**Backup and restore**
 In description data4daibetes having a space in between
 Make sure ... text should be aligned to the center

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -28,7 +28,8 @@
   "login":"Login",
   "loginNotYetUser":"Not yet a user?",
   "loginRegisterNow":"Register Now",
-
+  "loginPhoneNumberValidationText":"Please enter mobile number",
+  "loginValidPhoneNumberValidationText":"Please enter valid mobile number",
   "otpEnterOtp":"Enter the OTP sent to",
   "otpNotReceive":"Didn't receive the OTP?",
   "otpResend":"RESEND",
@@ -36,6 +37,10 @@
   "otpCancel":"Cancel",
 
   "register":"Registration",
+  "registerTrustContent":"You may be sharing sensitive info with this site or app. See the",
+  "registerAnd":"and",
+  "registerDataAgreementDetails":"data agreement details",
+  "registerTermsOfService":"Terms of Service.",
   "registerTopContent":"Data4Diabetes needs the following data to register and use the application. Please enter the data.",
   "registerData4DiabetesTrust":"Make sure that you trust Data4Diabetes",
   "registerBottomContent":"You may be sharing sensitive info with this site or app. See the data agreement details and Terms of Service.",
@@ -43,15 +48,19 @@
   "registerFirstName":"Name (First Name, Surname)",
   "registerLastName":"Last name",
   "registerMobileNumber":"Mobile number",
-   "registerAge":"Age",
-   "registerCGM":"CGM Data (mmol)",
-   "registerInsights":"Insights",
-   "registerAgree":"Agree",
-   "registerNext":"Next",
-   "registerAgreeFinish":"Agree & Finish",
-   "registerScannedImages":"Scanned Images",
+  "registerAge":"Age",
+  "registerCGM":"CGM Data (mmol)",
+  "registerInsights":"Insights",
+  "registerAgree":"Agree",
+  "registerNext":"Next",
+  "registerSkip":"Skip",
+  "registerFirstNameValidationText":"Please enter firstname",
+  "registerPhoneNumberValidationText":"Please enter mobile number",
+  "registerValidPhoneNumberValidationText":"Please enter valid mobile number",
+  "registerAgreeFinish":"Agree & Finish",
+  "registerScannedImages":"Scanned Images",
   "registerDonateData":"Donate your data!",
-   "registerBackupAndRestore":"Backup and Restore",
-   "registerBackupAndRestoreContent":"Data4 Diabetes recommends you to save all your data in your own data pod, fully encrypted. You can revoke this decision later from your personal data dashboard.",
+  "registerBackupAndRestore":"Backup and Restore",
+  "registerBackupAndRestoreContent":"Data4Diabetes recommends you to save all your data in your own data pod, fully encrypted. You can revoke this decision later from your personal data dashboard.",
   "registerDonateDataContent":"Data4Diabetes recommends you to donate your diabetes data and insights towards researchers.This will be anonymously shared."
 }
