#35 Add terms of service to registration screen, #19 On localisation, scan and check expands in IOS
Add terms of service to registration screen #35
On localisation, scan and check expands in IOS #19

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,7 +2,7 @@
   "bottomNavHome": "Home",
   "bottomNavMyWallet": "MyWallet",
   "bottomNavInsights": "Insights",
-  "bottomNavScanAndCheck": "Scan & Check",
+  "bottomNavScanAndCheck": "Check",
   "generalShareData":"Share Data",
   "homeMedication":"Medication",
   "homeActivities":"Activities",
