--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -1,7 +1,67 @@
 {
-  "bottomNavHome": "Swedish",
-  "bottomNavConnections": "Connections",
-  "bottomNavInsights": "Insights",
-  "bottomNavScanAndCheck": "Scan and Check",
-  "generalShareData":"Share Datsa"
+  "bottomNavHome": "Hem",
+  "bottomNavMyWallet": "Min Wallet",
+  "bottomNavInsights": "Insikter",
+  "bottomNavScanAndCheck": "Kontrollera",
+  "generalShareData":"Dela Data",
+  "homeMedication":"Mediciner",
+  "homeActivities":"Aktiviteter",
+  "homeFood":"Mat",
+  "homeEnvironment":"Miljö",
+  "homeBiological":"Biologisk",
+  "homeYourVirtualPancreas":"Din virtuella bukspottkörtel",
+  "settingsLanguage":"Språk",
+  "settingsEnglish":"Engelska",
+  "settingsSwedish":"Svenska",
+  "settingsSecurity":"Säkerhet (Face ID)",
+  "settingsMyWallet":"Min Wallet",
+  "settingsConnections":"My Connections",
+  "settingsMySharedData":"Min Delade Data",
+  "settingsPrivacyDashboard":"My Privacy Dashboard",
+  "settingsNotification":"Meddelanden",
+  "settingsLogout":"Logout",
+  "scanAndCheckRejectAndChange":"Reject and change",
+  "scanAndCheckReject":"Avböj",
+  "scanAndCheckConfirm":"Bekräfta",
+  "scanAndCheckContentText":"Click confirm to add this medicine to your medication list.",
+  "scanAndCheckMedicineScanAndAdd":"Medicin: skanna och lägga till",
+  "loginEnterMobileNumber":"Ange Mobilnummer",
+  "login":"Logga in",
+  "loginNotYetUser":"Ännu inte en användare?",
+  "loginRegisterNow":"Registrera Nu",
+  "loginPhoneNumberValidationText":"Please enter mobile number",
+  "loginValidPhoneNumberValidationText":"Please enter valid mobile number",
+  "otpEnterOtp":"Agne OTP som skickas till",
+  "otpNotReceive":"Fick du ingen kod?",
+  "otpResend":"skicka igen",
+  "otpConfirm":"Bekräfta",
+  "otpCancel":"Avbryt",
+
+  "register":"Registrera",
+  "registerTrustContent":"You may be sharing sensitive info with this site or app. See the",
+  "registerAnd":"and",
+  "registerDataAgreementDetails":"data agreement details",
+  "registerTermsOfService":"Terms of Service.",
+  "registerTopContent":"Data4Diabetes needs the following data to register and use the application. Please enter the data.",
+  "registerData4DiabetesTrust":"Make sure that you trust Data4Diabetes",
+  "registerBottomContent":"You may be sharing sensitive info with this site or app. See the data agreement details and Terms of Service.",
+  "registerCancel":"Avbryt",
+  "registerFirstName":"Förnamn",
+  "registerLastName":"Efternamn",
+  "registerMobileNumber":"Mobilnummer",
+  "registerAge":"Age",
+  "registerCGM":"CGM Data (mmol)",
+  "registerInsights":"Insights",
+  "registerAgree":"Agree",
+  "registerNext":"Next",
+  "registerSkip":"Skip",
+  "registerFirstNameValidationText":"Please enter firstname",
+  "registerPhoneNumberValidationText":"Please enter mobile number",
+  "registerValidPhoneNumberValidationText":"Please enter valid mobile number",
+  "registerAgreeFinish":"Agree & Finish",
+  "registerScannedImages":"Scanned Images",
+  "registerDonateData":"Donate your data!",
+  "registerBackupAndRestore":"Backup and Restore",
+  "registerBackupAndRestoreContent":"Data4Diabetes recommends you to save all your data in your own data pod, fully encrypted. You can revoke this decision later from your personal data dashboard.",
+  "registerDonateDataContent":"Data4Diabetes recommends you to donate your diabetes data and insights towards researchers.This will be anonymously shared."
 }
