Complete list of swedish texts updated

--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -15,22 +15,22 @@
   "settingsSwedish":"Svenska",
   "settingsSecurity":"Säkerhet (Face ID)",
   "settingsMyWallet":"Min Wallet",
-  "settingsConnections":"My Connections",
+  "settingsConnections":"Min Kontakter",
   "settingsMySharedData":"Min Delade Data",
-  "settingsPrivacyDashboard":"My Privacy Dashboard",
+  "settingsPrivacyDashboard":"Min Integritets Dashboard",
   "settingsNotification":"Meddelanden",
-  "settingsLogout":"Logout",
-  "scanAndCheckRejectAndChange":"Reject and change",
+  "settingsLogout":"Logga ut",
+  "scanAndCheckRejectAndChange":"Avböj och ändra",
   "scanAndCheckReject":"Avböj",
   "scanAndCheckConfirm":"Bekräfta",
-  "scanAndCheckContentText":"Click confirm to add this medicine to your medication list.",
+  "scanAndCheckContentText":"Klicka på bekräfta för att lägga till det här läkemedlet i din läkemedelslista.",
   "scanAndCheckMedicineScanAndAdd":"Medicin: skanna och lägga till",
   "loginEnterMobileNumber":"Ange Mobilnummer",
   "login":"Logga in",
   "loginNotYetUser":"Ännu inte en användare?",
   "loginRegisterNow":"Registrera Nu",
-  "loginPhoneNumberValidationText":"Please enter mobile number",
-  "loginValidPhoneNumberValidationText":"Please enter valid mobile number",
+  "loginPhoneNumberValidationText":"Ange mobilnummer",
+  "loginValidPhoneNumberValidationText":"Ange giltigt mobilnummer",
   "otpEnterOtp":"Agne OTP som skickas till",
   "otpNotReceive":"Fick du ingen kod?",
   "otpResend":"skicka igen",
@@ -38,30 +38,30 @@
   "otpCancel":"Avbryt",
 
   "register":"Registrera",
-  "registerTrustContent":"You may be sharing sensitive info with this site or app. See the",
-  "registerAnd":"and",
-  "registerDataAgreementDetails":"data agreement details",
-  "registerTermsOfService":"Terms of Service.",
-  "registerTopContent":"Data4Diabetes needs the following data to register and use the application. Please enter the data.",
-  "registerData4DiabetesTrust":"Make sure that you trust Data4Diabetes",
-  "registerBottomContent":"You may be sharing sensitive info with this site or app. See the data agreement details and Terms of Service.",
+  "registerTrustContent":"Du kan dela känslig information med den här webbplatsen eller appen. Se",
+  "registerAnd":"och",
+  "registerDataAgreementDetails":"Personuppgiftsavtal detaljer",
+  "registerTermsOfService":"Användarvillkor.",
+  "registerTopContent":"Data4Diabetes behöver följande uppgifter för att registrera och använda applikationen. Vänligen ange uppgifterna.",
+  "registerData4DiabetesTrust":"Se till att du litar på Data4Diabetes",
+  "registerBottomContent":"Du kan dela känslig information med den här webbplatsen eller appen. Se detaljerna i dataavtalet och användarvillkoren.",
   "registerCancel":"Avbryt",
-  "registerFirstName":"Förnamn",
+  "registerFirstName":"Namn (Förnamn, Efternamn)",
   "registerLastName":"Efternamn",
   "registerMobileNumber":"Mobilnummer",
-  "registerAge":"Age",
+  "registerAge":"Ålder",
   "registerCGM":"CGM Data (mmol)",
-  "registerInsights":"Insights",
-  "registerAgree":"Agree",
-  "registerNext":"Next",
-  "registerSkip":"Skip",
-  "registerFirstNameValidationText":"Please enter firstname",
-  "registerPhoneNumberValidationText":"Please enter mobile number",
-  "registerValidPhoneNumberValidationText":"Please enter valid mobile number",
-  "registerAgreeFinish":"Agree & Finish",
-  "registerScannedImages":"Scanned Images",
-  "registerDonateData":"Donate your data!",
-  "registerBackupAndRestore":"Backup and Restore",
-  "registerBackupAndRestoreContent":"Data4Diabetes recommends you to save all your data in your own data pod, fully encrypted. You can revoke this decision later from your personal data dashboard.",
-  "registerDonateDataContent":"Data4Diabetes recommends you to donate your diabetes data and insights towards researchers.This will be anonymously shared."
+  "registerInsights":"Insikter",
+  "registerAgree":"komma överens",
+  "registerNext":"Nästa",
+  "registerSkip":"Hoppa över",
+  "registerFirstNameValidationText":"Ange förnamn",
+  "registerPhoneNumberValidationText":"Ange mobilnummer",
+  "registerValidPhoneNumberValidationText":"Ange giltigt mobilnummer",
+  "registerAgreeFinish":"komma överens och avsluta ",
+  "registerScannedImages":"Skannade bilder",
+  "registerDonateData":"Donera dina data!",
+  "registerBackupAndRestore":"Backup och återställa",
+  "registerBackupAndRestoreContent":"Data4Diabetes rekommenderar att du sparar alla dina data i din egen datapod, helt krypterad. Du kan återkalla detta beslut senare från din instrumentpanel för personuppgifter.",
+  "registerDonateDataContent":"Data4Diabetes rekommenderar att du donerar dina diabetesdata och insikter till forskare, som kommer att dela dem anonymt."
 }
