add swedish localization to settings app bar heading and privacy policy text

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -20,6 +20,8 @@
   "settingsPrivacyDashboard":"My Privacy Dashboard",
   "settingsNotification":"Notifications",
   "settingsLogout":"Logout",
+  "settingsSettings":"Settings",
+  "settingsPrivacyPolicy":"Privacy Policy",
   "scanAndCheckRejectAndChange":"Reject and change",
   "scanAndCheckReject":"Reject",
   "scanAndCheckConfirm":"Confirm",
