--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -65,5 +65,7 @@
   "registerDonateData":"Donate your data!",
   "registerBackupAndRestore":"Backup and Restore",
   "registerBackupAndRestoreContent":"Data4Diabetes recommends you to save all your data in your own data pod, fully encrypted. You can revoke this decision later from your personal data dashboard.",
-  "registerDonateDataContent":"Data4Diabetes recommends you to donate your diabetes data and insights towards researchers.This will be anonymously shared."
+  "registerDonateDataContent":"Data4Diabetes recommends you to donate your diabetes data and insights towards researchers.This will be anonymously shared.",
+  "registerExistingUser":"User already existing and is active",
+  "registerNotExistingUser":"User is not existing"
 }
