--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -65,5 +65,7 @@
   "registerDonateData":"Donera dina data!",
   "registerBackupAndRestore":"Backup och återställa",
   "registerBackupAndRestoreContent":"Data4Diabetes rekommenderar att du sparar alla dina data i din egen datapod, helt krypterad. Du kan återkalla detta beslut senare från din instrumentpanel för personuppgifter.",
-  "registerDonateDataContent":"Data4Diabetes rekommenderar att du donerar dina diabetesdata och insikter till forskare, som kommer att dela dem anonymt."
+  "registerDonateDataContent":"Data4Diabetes rekommenderar att du donerar dina diabetesdata och insikter till forskare, som kommer att dela dem anonymt.",
+  "registerExistingUser":"Användaren finns redan och är aktiv",
+   "registerNotExistingUser":"Användaren finns inte"
 }
