--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -67,5 +67,21 @@
   "registerBackupAndRestoreContent":"Data4Diabetes recommends you to save all your data in your own data pod, fully encrypted. You can revoke this decision later from your personal data dashboard.",
   "registerDonateDataContent":"Data4Diabetes recommends you to donate your diabetes data and insights towards researchers.This will be anonymously shared.",
   "registerExistingUser":"User already existing and is active",
-  "registerNotExistingUser":"User is not existing"
+  "registerNotExistingUser":"User is not existing",
+  "insightsToday":"TODAY",
+  "insightsLast7Days":"LAST 7 DAYS",
+  "insightsLast30Days":"LAST 30 DAYS",
+  "insightsGlucoseTIR":"Glucose - Time in range",
+  "insightsVeryHighRange":"Very high > 13.9 mmol/l",
+  "insightsHighRange":"High 10.1 - 13.9 mmol/l",
+  "insightsTargetRange":"Target range 3.9 - 10 mmol/l",
+  "insightsLowRange":"Low 3 - 3.8 mmol/l",
+  "insightsVeryLow":"Very low < 3 mmol/l",
+  "insightsSummary":"Summary",
+  "insightsGMI":"GMI",
+  "insightsAvgValue":"Average Value",
+  "insightsActiveCGM":"% Active time with CGM"
+
+
+
 }
