#66 Delete account option for user
Delete account option for user #66

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,7 +21,13 @@
   "settingsNotification":"Notifications",
   "settingsLogout":"Logout",
   "settingsSettings":"Settings",
+  "settingsDeleteAccount":"Delete Account",
   "settingsPrivacyPolicy":"Privacy Policy",
+  "settingsDeleteAccountSuccess":"User account deleted successfully",
+  "settingsDeleteAccountFail":"User does not exist",
+  "settingsDeleteAccountContent":"Do you want to delete your account?",
+  "settingsDeleteAccountYes":"Yes",
+  "settingsDeleteAccountNo":"No",
   "scanAndCheckRejectAndChange":"Reject and change",
   "scanAndCheckReject":"Reject",
   "scanAndCheckConfirm":"Confirm",
