--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -21,7 +21,13 @@
   "settingsNotification":"Meddelanden",
   "settingsLogout":"Logga ut",
   "settingsSettings":"Inställningar",
+  "settingsDeleteAccount":"Ta bort konto",
   "settingsPrivacyPolicy":"Integritetspolicy",
+  "settingsDeleteAccountSuccess":"Användarkontot har tagits bort",
+  "settingsDeleteAccountFail":"Användaren finns inte",
+  "settingsDeleteAccountContent":"Vill du ta bort ditt konto?",
+  "settingsDeleteAccountYes":"Ja",
+  "settingsDeleteAccountNo":"Nej",
   "scanAndCheckRejectAndChange":"Avböj och ändra",
   "scanAndCheckReject":"Avböj",
   "scanAndCheckConfirm":"Bekräfta",
