#85 option to logout from dexcom for logged users
option to logout from dexcom for logged users #85

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -20,6 +20,10 @@
   "settingsPrivacyDashboard":"My Privacy Dashboard",
   "settingsNotification":"Notifications",
   "settingsDexcom":"Dexcom Dashboard",
+  "settingsAlert":"Alert",
+  "settingsDexcomAlert":"You are already logged in to Dexcom\nDo you want to Logout?",
+  "settingsDexcomLoginYes":"Yes",
+  "settingsDexcomLoginNo":"No",
   "settingsLogout":"Logout",
   "settingsSettings":"Settings",
   "settingsDeleteAccount":"Delete Account",
