--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -20,6 +20,10 @@
   "settingsPrivacyDashboard":"Min Integritets Dashboard",
   "settingsNotification":"Meddelanden",
   "settingsDexcom":"Dexcom Översikt",
+  "settingsAlert":"Alert",
+  "settingsDexcomAlert":"Du är redan inloggad på Dexcom\nVill du logga ut?",
+  "settingsDexcomLoginYes":"Ja",
+  "settingsDexcomLoginNo":"Nej",
   "settingsLogout":"Logga ut",
   "settingsSettings":"Inställningar",
   "settingsDeleteAccount":"Ta bort konto",
