#90 If the Mobile default language is Swedish, a few screen msg show in English to be corrected
Resolved:
If the Mobile default language is Swedish, a few screen msg show in English to be corrected #90

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -90,5 +90,10 @@
   "insightsSummary":"Summary",
   "insightsGMI":"GMI",
   "insightsAvgValue":"Average Value",
-  "insightsActiveCGM":"% Active time with CGM"
+  "insightsActiveCGM":"% Active time with CGM",
+  "insightsDexcomTitle":"Dexcom Login",
+  "insightsDexcomContent":"Please login to Dexcom to get your estimated glucose values",
+  "insightsOk":"Ok",
+  "insightsCancel":"Cancel"
+
 }
