#236 Remove user account
As the play console recommends, we need to add an new option for users to delete their account.
Add a new option in settings, "Remove My Account"

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -26,7 +26,7 @@
   "settingsDexcomLoginNo":"No",
   "settingsLogout":"Logout",
   "settingsSettings":"Settings",
-  "settingsDeleteAccount":"Delete Account",
+  "settingsDeleteAccount":"Remove My Account",
   "settingsPrivacyPolicy":"Privacy Policy",
   "settingsDeleteAccountSuccess":"User account deleted successfully",
   "settingsDeleteAccountFail":"User does not exist",
