--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -26,7 +26,7 @@
   "settingsDexcomLoginNo":"Nej",
   "settingsLogout":"Logga ut",
   "settingsSettings":"Inställningar",
-  "settingsDeleteAccount":"Ta bort konto",
+  "settingsDeleteAccount":"Ta bort mitt konto",
   "settingsPrivacyPolicy":"Integritetspolicy",
   "settingsDeleteAccountSuccess":"Användarkontot har tagits bort",
   "settingsDeleteAccountFail":"Användaren finns inte",
