Remove Account issues
Bug: #245 - Remove Account issues.
1. Alert message title should be "Alert"
2. The label name in settings screen should be "Remove Account"
3. The success message should be "Your account has been deleted successfully"

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -26,9 +26,9 @@
   "settingsDexcomLoginNo":"No",
   "settingsLogout":"Logout",
   "settingsSettings":"Settings",
-  "settingsDeleteAccount":"Remove My Account",
+  "settingsDeleteAccount":"Remove Account",
   "settingsPrivacyPolicy":"Privacy Policy",
-  "settingsDeleteAccountSuccess":"User account deleted successfully",
+  "settingsDeleteAccountSuccess":"Your account has been deleted successfully",
   "settingsDeleteAccountFail":"User does not exist",
   "settingsDeleteAccountContent":"Do you want to delete your account?",
   "settingsDeleteAccountYes":"Yes",
