--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -26,9 +26,9 @@
   "settingsDexcomLoginNo":"Nej",
   "settingsLogout":"Logga ut",
   "settingsSettings":"Inställningar",
-  "settingsDeleteAccount":"Ta bort mitt konto",
+  "settingsDeleteAccount":"Ta bort konto",
   "settingsPrivacyPolicy":"Integritetspolicy",
-  "settingsDeleteAccountSuccess":"Användarkontot har tagits bort",
+  "settingsDeleteAccountSuccess":"Ditt konto har raderats framgångsrikt",
   "settingsDeleteAccountFail":"Användaren finns inte",
   "settingsDeleteAccountContent":"Vill du ta bort ditt konto?",
   "settingsDeleteAccountYes":"Ja",
