Optimize the usage of OTP
Feature:#88 - Optimize the usage of OTP.
Users are restricted from requesting OTP more than 3 times within a 60-second timeframe. If the limit is exceeded, users will need to wait for 60 seconds before being allowed to retry OTP.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -94,6 +94,7 @@
   "insightsDexcomTitle":"Dexcom Login",
   "insightsDexcomContent":"Please login to Dexcom to get your estimated glucose values",
   "insightsOk":"Ok",
-  "insightsCancel":"Cancel"
+  "insightsCancel":"Cancel",
+  "otpLimitExceeded":"OTP request limit exceeded. Please try again after sometime."
 
 }
