--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -19,6 +19,7 @@
   "settingsMySharedData":"Min Delade Data",
   "settingsPrivacyDashboard":"Min Integritets Dashboard",
   "settingsNotification":"Meddelanden",
+   "settingsServices":"Tjänster",
   "settingsDexcom":"Dexcom Översikt",
   "settingsAlert":"Alert",
   "settingsDexcomAlert":"Du är redan inloggad på Dexcom\nVill du logga ut?",
